2004-01-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - terrain display bugfix
	  - sky display bugfix
	* submarine_XXI.cpp
	  - torpedo creation bugfix
	* submarine_interface.cpp
	  - periscope display bugfix
	* subsim.cpp network.*
	  - add experimental network code, server/client searching and
	    connecting

2003-12-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* released 0.0.15 for linux, VC++6 couldn't compile the code.

2003-12-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game:
	  - added read/write functions for pointer to number translation and
	    vice versa (store numbers instead of pointers in save games)
	  - removed "parent" attribute in class torpedo
	  - fixed loading and saving except of water splashes
	    now games can be saved and loaded!!! (water splashes are ignored)
	  - fixed bugs in widget and font
	  - wishlist/todo: replace myassert(false,..) calls with exceptions
	  - IMPORTANT NOTE: the user interface is generated after the game
	    has been loaded. This means all data stored in the
	    user_interface class (and related classes) IS LOST!
	    We shouldn't store data here OR save it extra.

2003-12-27  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* widget.h widget.cpp subsim.cpp
	  - fixed some widget bugs, made some menues nicer

2003-12-26  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim.cpp game.cpp game.h
	  - added an interface to load and save games (ripped from advse)
	  - added a "load game" option in the "play single mission" menu
	  - next release should be after loading/saving works 100%

2003-12-26  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game, sea_object and heirs, date
	  - introduced load/save functions
	  - most objects can be loaded and saved binary now
	  - factory functions for ship/sub/water_splash still missing
	  - fixed bug in file selection dialogue

2003-12-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game, user_interface